--- a/src/index.html
+++ b/src/index.html
@@ -77,9 +77,9 @@
             c[this.checked ? 'restartPaintThread' : 'stopPaintThread']();
         };
 
-        setInterval(function() {
-            c.repaint();
-        }, 100);
+        // setInterval(function() {
+        //     c.repaint();
+        // }, 100);
 
         function logEvt(e) {
             console.log(e.type);
